--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_borrow/asset_borrow_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_borrow/asset_borrow_form.html
@@ -2,7 +2,7 @@
 /**
  * 资产借用 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-08-18 14:34:12
+ * @since 2021-08-18 17:36:38
  */
  -->
  <!DOCTYPE html>
@@ -38,21 +38,21 @@
             <div class="layui-col-xs4 form-column">
 
 
-                    <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('借出时间')}">借出时间</div><div class="layui-required">*</div></div>
-                        <div class="layui-input-block ">
-                            <input input-type="date" lay-filter="borrowTime" id="borrowTime" name="borrowTime"  autocomplete="off"  readonly  th:placeholder="${ lang.translate('请选择') +''+ lang.translate('借出时间') }" type="text" class="layui-input"    lay-verify="|required"   />
-                        </div>
-                    </div>
-
-
-                
                 <div class="layui-form-item" >
                     <div class="layui-form-label "><div th:text="${lang.translate('借用人')}">借用人</div><div class="layui-required">*</div></div>
                     <div class="layui-input-block ">
                         <input lay-filter="borrowerId" id="borrowerId" name="borrowerId" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('借用人') }" type="text" class="layui-input"    lay-verify="|required"   />
                     </div>
                 </div>
+
+
+                
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('借出时间')}">借出时间</div><div class="layui-required">*</div></div>
+                        <div class="layui-input-block ">
+                            <input input-type="date" lay-filter="borrowTime" id="borrowTime" name="borrowTime"  autocomplete="off"  readonly  th:placeholder="${ lang.translate('请选择') +''+ lang.translate('借出时间') }" type="text" class="layui-input"    lay-verify="|required"   />
+                        </div>
+                    </div>
 
 
                 <!--结束：栏次内字段循环-->
@@ -96,10 +96,10 @@
             <div class="layui-col-xs12 form-column">
 
 
-                <div class="layui-form-item" >
+                    <div class="layui-form-item" >
                     <div class="layui-form-label "><div th:text="${lang.translate('借出说明')}">借出说明</div></div>
                     <div class="layui-input-block ">
-                        <input lay-filter="content" id="content" name="content" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('借出说明') }" type="text" class="layui-input"   />
+                        <textarea lay-filter="content" id="content" name="content" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('借出说明') }" class="layui-textarea" style="height: 30px" ></textarea>
                     </div>
                 </div>
 
@@ -111,6 +111,7 @@
         <!--结束：group循环-->
 
         <div style="height: 8px"></div>
+        <div style="height: 250px"></div>
 
 
     </form>
@@ -129,6 +130,8 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
+    var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
+    var SELECT_ASSETSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetBorrowStatusEnum')}]];
     var VALIDATE_CONFIG={"borrowerId":{"labelInForm":"借用人","inputType":"text_input","required":true},"borrowTime":{"labelInForm":"借出时间","inputType":"date_input","required":true}};
     var AUTH_PREFIX="eam_asset_borrow";
 </script>
