--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_collection_return/asset_collection_return_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_collection_return/asset_collection_return_list.html
@@ -2,7 +2,7 @@
 /**
  * 资产退库 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-08-18 14:54:49
+ * @since 2021-08-18 17:38:18
  */
  -->
  <!DOCTYPE html>
@@ -31,30 +31,47 @@
             <div class="search-input-rows" style="opacity: 0">
                 <!-- 搜索输入区域 -->
                 <div class="layui-form toolbar search-inputs">
-                    <!-- 业务日期 , businessDate ,typeName=date_input, isHideInSearch=false -->
+                    <!-- 办理状态 , status ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('业务日期')}" class="search-label businessDate-label">业务日期</span><span class="search-colon">:</span></div>
-                            <input type="text" id="businessDate"  style="width: 140px"  lay-verify="date" th:placeholder="${lang.translate('请选择')}" autocomplete="off" class="layui-input search-input search-date-input" readonly>
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('办理状态')}" class="search-label status-label">办理状态</span><span class="search-colon">:</span></div>
+                        <input id="status" class="layui-input search-input" style="width: 140px" type="text" />
                     </div>
-                    <!-- 制单人 , originatorId ,typeName=text_input, isHideInSearch=false -->
+                    <!-- 退库使用组织 , userOrganizationId ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('制单人')}" class="search-label originatorId-label">制单人</span><span class="search-colon">:</span></div>
-                        <input id="originatorId" class="layui-input search-input" style="width: 140px" type="text" />
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('退库使用组织')}" class="search-label userOrganizationId-label">退库使用组织</span><span class="search-colon">:</span></div>
+                        <input id="userOrganizationId" class="layui-input search-input" style="width: 140px" type="text" />
                     </div>
-                    <!-- 退库说明 , content ,typeName=text_input, isHideInSearch=false -->
+                    <!-- 退库日期 , returnDate ,typeName=date_input, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('退库说明')}" class="search-label content-label">退库说明</span><span class="search-colon">:</span></div>
-                        <input id="content" class="layui-input search-input" style="width: 140px" type="text" />
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('退库日期')}" class="search-label returnDate-label">退库日期</span><span class="search-colon">:</span></div>
+                            <input type="text" id="returnDate-begin" style="width: 140px" lay-verify="date" th:placeholder="${lang.translate('开始日期')}" autocomplete="off" class="layui-input search-input search-date-input"  readonly >
+                            <span class="search-dash">-</span>
+                            <input type="text" id="returnDate-end"  style="width: 140px"  lay-verify="date" th:placeholder="${lang.translate('结束日期')}" autocomplete="off" class="layui-input search-input search-date-input" readonly>
                     </div>
 
 
                 </div>
                 <!-- 搜索输入区域 -->
                 <div class="layui-form toolbar search-inputs">
-                    <!-- 办理状态 , status ,typeName=text_input, isHideInSearch=false -->
+                    <!-- 制单人 , originatorId ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('办理状态')}" class="search-label status-label">办理状态</span><span class="search-colon">:</span></div>
-                        <input id="status" class="layui-input search-input" style="width: 140px" type="text" />
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('制单人')}" class="search-label originatorId-label">制单人</span><span class="search-colon">:</span></div>
+                        <input id="originatorId" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 存放位置 , positionId ,typeName=select_box, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('存放位置')}" class="search-label positionId-label">存放位置</span><span class="search-colon">:</span></div>
+                        <div id="positionId" th:data="${'/service-eam/eam-position/query-list'}" style="width:140px"></div>
+                    </div>
+                    <!-- 业务编号 , businessCode ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('业务编号')}" class="search-label businessCode-label">业务编号</span><span class="search-colon">:</span></div>
+                        <input id="businessCode" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 退库说明 , content ,typeName=text_area, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('退库说明')}" class="search-label content-label">退库说明</span><span class="search-colon">:</span></div>
+                        <input id="content" class="layui-input search-input" style="width: 140px" type="text" />
                     </div>
 
 
@@ -96,7 +113,7 @@
     <a th:if="${perm.checkAnyAuth('eam_asset_collection_return:update','eam_asset_collection_return:save')}" class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit" th:text="${lang.translate('修改')}">修改</a>
 
 
-    <a th:if="${perm.checkAuth('eam_asset_collection_return:delete')}" class="layui-btn layui-btn-xs" lay-event="del" th:text="${lang.translate('删除')}">删除</a>
+    <a th:if="${perm.checkAuth('eam_asset_collection_return:delete')}" class="layui-btn layui-btn-xs layui-btn-danger" lay-event="del" th:text="${lang.translate('删除')}">删除</a>
 </script>
 
 
