--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_repair/asset_repair_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_repair/asset_repair_list.html
@@ -2,7 +2,7 @@
 /**
  * 资产报修 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-08-18 14:34:14
+ * @since 2021-08-18 18:00:23
  */
  -->
  <!DOCTYPE html>
@@ -31,35 +31,47 @@
             <div class="search-input-rows" style="opacity: 0">
                 <!-- 搜索输入区域 -->
                 <div class="layui-form toolbar search-inputs">
-                    <!-- 业务名称 , name ,typeName=text_input, isHideInSearch=false -->
+                    <!-- 办理状态 , status ,typeName=select_box, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('业务名称')}" class="search-label name-label">业务名称</span><span class="search-colon">:</span></div>
-                        <input id="name" class="layui-input search-input" style="width: 140px" type="text" />
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('办理状态')}" class="search-label status-label">办理状态</span><span class="search-colon">:</span></div>
+                        <div id="status" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}" style="width:140px"></div>
                     </div>
-                    <!-- 报修类型 , type ,typeName=select_box, isHideInSearch=false -->
+                    <!-- 报修人 , operuserId ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('报修类型')}" class="search-label type-label">报修类型</span><span class="search-colon">:</span></div>
-                        <div id="type" th:data="${dict.toArray('eam_repair_type')}" style="width:140px"></div>
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('报修人')}" class="search-label operuserId-label">报修人</span><span class="search-colon">:</span></div>
+                        <input id="operuserId" class="layui-input search-input" style="width: 140px" type="text" />
                     </div>
                     <!-- 业务日期 , businessDate ,typeName=date_input, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style=""><span th:text="${lang.translate('业务日期')}" class="search-label businessDate-label">业务日期</span><span class="search-colon">:</span></div>
-                            <input type="text" id="businessDate"  style="width: 140px"  lay-verify="date" th:placeholder="${lang.translate('请选择')}" autocomplete="off" class="layui-input search-input search-date-input" readonly>
-                    </div>
-                    <!-- 报修内容 , content ,typeName=text_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('报修内容')}" class="search-label content-label">报修内容</span><span class="search-colon">:</span></div>
-                        <input id="content" class="layui-input search-input" style="width: 140px" type="text" />
+                            <input type="text" id="businessDate-begin" style="width: 140px" lay-verify="date" th:placeholder="${lang.translate('开始日期')}" autocomplete="off" class="layui-input search-input search-date-input"  readonly >
+                            <span class="search-dash">-</span>
+                            <input type="text" id="businessDate-end"  style="width: 140px"  lay-verify="date" th:placeholder="${lang.translate('结束日期')}" autocomplete="off" class="layui-input search-input search-date-input" readonly>
                     </div>
 
 
                 </div>
                 <!-- 搜索输入区域 -->
                 <div class="layui-form toolbar search-inputs">
-                    <!-- 流程 , procId ,typeName=text_input, isHideInSearch=false -->
+                    <!-- 报修类型 , type ,typeName=select_box, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('流程')}" class="search-label procId-label">流程</span><span class="search-colon">:</span></div>
-                        <input id="procId" class="layui-input search-input" style="width: 140px" type="text" />
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('报修类型')}" class="search-label type-label">报修类型</span><span class="search-colon">:</span></div>
+                        <div id="type" th:data="${dict.toArray('eam_repair_type')}" style="width:140px"></div>
+                    </div>
+                    <!-- 维修状态 , repairStatus ,typeName=select_box, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('维修状态')}" class="search-label repairStatus-label">维修状态</span><span class="search-colon">:</span></div>
+                        <div id="repairStatus" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetRepairStatusEnum')}" style="width:140px"></div>
+                    </div>
+                    <!-- 业务编号 , businessCode ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('业务编号')}" class="search-label businessCode-label">业务编号</span><span class="search-colon">:</span></div>
+                        <input id="businessCode" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 报修内容 , content ,typeName=text_area, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('报修内容')}" class="search-label content-label">报修内容</span><span class="search-colon">:</span></div>
+                        <input id="content" class="layui-input search-input" style="width: 140px" type="text" />
                     </div>
 
 
@@ -101,12 +113,14 @@
     <a th:if="${perm.checkAnyAuth('eam_asset_repair:update','eam_asset_repair:save')}" class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit" th:text="${lang.translate('修改')}">修改</a>
 
 
-    <a th:if="${perm.checkAuth('eam_asset_repair:delete')}" class="layui-btn layui-btn-xs" lay-event="del" th:text="${lang.translate('删除')}">删除</a>
+    <a th:if="${perm.checkAuth('eam_asset_repair:delete')}" class="layui-btn layui-btn-xs layui-btn-danger" lay-event="del" th:text="${lang.translate('删除')}">删除</a>
 </script>
 
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
+    var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
+    var SELECT_REPAIRSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetRepairStatusEnum')}]];
     var SELECT_TYPE_DATA = [[${dict.toArray('eam_repair_type')}]];
     var AUTH_PREFIX="eam_asset_repair";
 </script>
