--- a/eam/common/generator/src/main/resources/templates/form.js.vm
+++ b/eam/common/generator/src/main/resources/templates/form.js.vm
@@ -191,6 +191,7 @@ function FormPage() {
 			form.val('data-form', formData);
 
 	     	#for(f : fields)
+			#if(f.isInFormLayout)
 		    #if(f.typeName.equals("upload"))
 			//设置 #(f.labelInForm) 显示附件
 		    if($("##(f.varName)").val()) {
@@ -221,6 +222,7 @@ function FormPage() {
 			fox.setSelectValue4Dict("##(f.varName)",formData.#(f.varName),SELECT_#(f.varName.toUpperCase())_DATA);
 			#elseif(f.selectField.enumTypeName!=null)
 			fox.setSelectValue4Enum("##(f.varName)",formData.#(f.varName),SELECT_#(f.varName.toUpperCase())_DATA);
+			#end
 			#end
 			#end
 			#end
@@ -267,7 +269,7 @@ function FormPage() {
 
 
 	    	#for(f : fields)
-			#if(!f.isHideInForm)
+			#if(f.isInFormLayout)
 		    #if(f.typeName.equals("logic_switch"))
 			//处理 #(f.labelInForm) 默认值
 		    if(!data.field.#(f.varName)) data.field.#(f.varName)=0;
@@ -277,7 +279,7 @@ function FormPage() {
 
 
 			#for(f : fields)
-			#if(!f.isHideInForm)
+			#if(f.isInFormLayout)
 			#if(f.typeName.equals("check_box"))
 			//处理 #(f.labelInForm) 默认值
 			data.field["#(f.varName)"]=fox.getCheckedValue("#(f.varName)");
@@ -288,7 +290,7 @@ function FormPage() {
 
 
 			#for(f : fields)
-			#if(!f.isHideInForm)
+			#if(f.isInFormLayout)
 			#if(f.typeName.equals("select_box"))
 			//获取 #(f.labelInForm) 下拉框的值
 			data.field["#(f.varName)"]=xmSelect.get("##(f.varName)",true).getValue("value");
