--- a/eam/common/generator/src/main/resources/templates/form.html.vm
+++ b/eam/common/generator/src/main/resources/templates/form.html.vm
@@ -212,6 +212,7 @@
     var AUTH_PREFIX="#(authPrefix)";
 </script>
 
+<script th:src="'#(extURI)?'+${cacheKey}"></script>
 <script th:src="'#(jsURI)?'+${cacheKey}"></script>
 
 </body>
