--- a/eam/common/generator/src/main/resources/templates/list.js.vm
+++ b/eam/common/generator/src/main/resources/templates/list.js.vm
@@ -18,7 +18,7 @@ function ListPage() {
 	this.init=function(layui) {
      	
      	admin = layui.admin,settings = layui.settings,form = layui.form,upload = layui.upload,laydate= layui.laydate;
-		table = layui.table,layer = layui.layer,util = layui.util,fox = layui.foxnic,xmSelect = layui.xmSelect;
+		table = layui.table,layer = layui.layer,util = layui.util,fox = layui.foxnic,xmSelect = layui.xmSelect,dropdown=layui.dropdown;;
 		
      	//渲染表格
      	renderTable();
@@ -47,15 +47,13 @@ function ListPage() {
 		fox.adjustSearchElement();
 		//
 		function renderTableInternal() {
+
 			var ps={};
 			var contitions={};
-			#if(beforeQueryFunc!=null)
-			#(beforeQueryFunc.name)(contitions);
+			window.pageExt.list.beforeQuery && window.pageExt.list.beforeQuery(contitions);
 			if(Object.keys(contitions).length>0) {
 				ps = {searchField: "$composite", searchValue: JSON.stringify(contitions)};
 			}
-			#end
-
 
 			var h=$(".search-bar").height();
 			dataTable=fox.renderTable({
@@ -187,9 +185,7 @@ function ListPage() {
 		#end
 		#end
 		#end
-		#if(beforeQueryFunc!=null)
-		#(beforeQueryFunc.name)(value);
-		#end
+		window.pageExt.list.beforeQuery && window.pageExt.list.beforeQuery(value);
 		var ps={searchField: "$composite", searchValue: JSON.stringify(value)};
 		if(sortField) {
 			ps.sortField=sortField;
@@ -437,6 +433,7 @@ function ListPage() {
 		//头工具栏事件
 		table.on('toolbar(data-table)', function(obj){
 			var checkStatus = table.checkStatus(obj.config.id);
+			var selected=#if(isSimplePK)getCheckedList("#(idPropertyName)");#else getCheckedList();#end
 			switch(obj.event){
 				case 'create':
 					openCreateFrom();
@@ -444,6 +441,11 @@ function ListPage() {
 				#if(isSimplePK)
 				case 'batch-del':
 					batchDelete();
+					break;
+				#end
+				#for(b:toolButtons)
+				case 'tool-#(b.id)':
+					window.pageExt.list.#(b.functionName) && window.pageExt.list.#(b.functionName)(selected,obj);
 					break;
 				#end
 				case 'other':
@@ -549,7 +551,22 @@ function ListPage() {
 			}
 			#for(b:opColumnButtons)
 			else if (layEvent === '#(b.id)') { // #(b.label)
-				#(b.jsFunction.name)(data);
+				window.pageExt.list.#(b.functionName)(data);
+			}
+			#end
+			#if(opColumnMenus!=null && opColumnMenus.size()>0)
+			else if(obj.event === 'ops-more'){
+				//更多下拉菜单
+				dropdown.render({
+					elem: this
+					,show: true //外部事件触发即显示
+					,data: #(opColumnMenuData)
+					,click: function(menu, othis){
+						window.pageExt.list.moreAction && window.pageExt.list.moreAction(menu,data, othis);
+					}
+					,align: 'right'
+					,style: 'box-shadow: 1px 1px 10px rgb(0 0 0 / 12%);'
+				});
 			}
 			#end
 			#if(isTree)else if (layEvent === 'drill') {
@@ -580,7 +597,7 @@ function ListPage() {
 			title: title,
 			resize: false,
 			offset: [top,null],
-			area: ["#(formWindow.width)px",height+"px"],
+			area: ["#(formWindow.width)",height+"px"],
 			type: 2,
 			content: '#(formURI)' + queryString,
 			finish: function () {
@@ -590,25 +607,13 @@ function ListPage() {
 		admin.putTempData('#(formDataKey)-popup-index', index);
 	};
 
-	#for(b:opColumnButtons)
-	/**
-	 * #(b.label) 操作
-	 */
-	#(b.jsFunction.source)
-	#end
-
-	#if(beforeQueryFunc!=null)
-	#(beforeQueryFunc.source);
-	#end
-
 };
 
 
-layui.config({
-	dir: layuiPath,
-	base: '/module/'
-}).extend({
-	xmSelect: 'xm-select/xm-select'
-}).use(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','xmSelect','laydate'],function() {
-	(new ListPage()).init(layui);
+layui.use(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','xmSelect','laydate','dropdown'],function() {
+	var task=setInterval(function (){
+		if(!window["pageExt"]) return;
+		clearInterval(task);
+		(new ListPage()).init(layui);
+	},1);
 });
